# project_template

./: .env  .gitignore  _main.py  compile.md  log.ini  main.py  progname.conf  pyproject.toml
docs/: search.js  src.html
docs/src/: app.html  core.html  scripts.html
docs/src/core/: config.html  err.html  exceptions.html  log_cfg.html  metric.html  path.html
docs/src/scripts/: create_docs.html
src/: __init__.py  app.py  config.py  parser.py
src/core/: config.py  err.py  exceptions.py  metric.py  path.py
src/scripts/: create_docs.py
tests/: polygon.ipynb  polygon.py
