[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["daniil-mazurov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pdoc = "^15.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
